Changed background formatting

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     
     <title>Document</title>
 </head>
-<body style="padding: 10px; margin: 10px; color: gold; background-image: linear-gradient(to right top, #d16ba5, #c05b89, #ae4d6f, #9a4058, #853442, #87333e, #89323a, #8b3236, #a63d40, #c2484b, #de5355, #fb5f5f);
-font-family: ;">
+<body style="padding: 10px; margin: 10px; color: yellow; " bgcolor="#101010">
 
     <h1 style="font-size:4em; text-transform: unset; padding-left: 20px;">PASS DELI</h1>
     <P style="font-size: 1.5em; color:chartreuse; padding-left: 20px;">Home away from home.</P>
