--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     
     <title>Document</title>
 </head>
-<body style="padding: 10px; margin: 10px; color: #ff4d88; background-image: url(https://cdn.pixabay.com/photo/2014/02/17/22/34/french-cafe-268781_960_720.jpg); background-blend-mode: soft-light; background-repeat: no-repeat ; position: absolute; background-position: top; background-size: 100% 300px; bottom: 10%; left: 0; top: 0; width: 100%;" bgcolor="#101010">
+<body style="padding: 10px; margin: 10px; color: gold; background-image: url(https://cdn.pixabay.com/photo/2014/02/17/22/34/french-cafe-268781_960_720.jpg); background-blend-mode: soft-light; background-repeat: no-repeat ; position: absolute; background-position: top; background-size: 100% 300px; bottom: 10%; left: 0; top: 0; width: 100%;" bgcolor="#101010">
 
     <img src="https://cdn.pixabay.com/photo/2017/09/22/16/30/cake-2776228_960_720.png" alt="" width="100px" height="100px" style="float: left; position: absolute; top:40px">
-    <h1 style="font-size:4em; text-transform: uppercase; padding-left: 20px; position: relative; left: 100px; top: 0px;">PASS DELI é restaurant</h1>
+    <h1 style="font-size:4em; text-transform: uppercase; color: hotpink; padding-left: 20px; position: relative; left: 100px; top: 0px;">PASS DELI é restaurant</h1>
     <P style="font-size: 1.5em; color:white; padding-left: 20px;">Home away from home.</P>
 
     <a href="" style="color: #ff4d88; padding: 10px 20px ; margin: 10px; background:#ffe6ee; border-radius: 20px; text-decoration: none; float: right; margin-right: 50px; margin-bottom: 20px;">Home</a>
@@ -19,59 +19,63 @@
 
     <table style="width: 100%; border-collapse: collapse; border-radius: 15px; overflow: hidden;" bgcolor="" cellpadding="10px" >
         <tr style="text-align: left;">
-            <td width=35%>
-                <img src="https://cdn.pixabay.com/photo/2015/09/05/01/05/french-fries-923687_960_720.jpg" alt="French Fries" height=250px width=100% style="border-radius: 7.5px; filter: brightness(100%);">
+            <td width=35% height=250px>
+                <img src="https://cdn.pixabay.com/photo/2019/06/20/17/24/raspberry-4287635_960_720.jpg" alt="Milk Shake" height=100% width=100% style="border-radius: 7.5px; filter: brightness(100%);">
             </td>
             <td width=40%>
-                <h2 style="font-size: 30px; background: rgba(255, 204, 229, .4);border-radius: 5px; padding: 10px; color: gold; ">French Fries</h3>
-                <p class="menu_description" style="color: white;">Healthy and delicious deep fried potato chips.</p>
+                <h2 style="font-size: 30px; background: rgba(255, 204, 229, .4);border-radius: 5px; padding: 10px; color: gold; ">Milk Shake</h3>
+                <p class="menu_description" style="color: white;">Healthy and delicious deep milk.</p>
                 <a href="contact.html" style="text-decoration: none; color: white; padding: 5px 15px; margin-top: 20px; background: rgb(255, 51, 153); border-radius: 10px; ">Order</a>
             </td>
-            <td><h4 style="font-size: 30px; float: left; font-family: 'Raleway', sans-serif;">120 </h4><p style="">Ksh</p></td>
+            <td>
+                <p style="border:; padding:50px 50px; ; border-radius: 50px; position:absolute; bottom: 0; background: rgba(255, 230, 242, .15);"></p>
+                <h4 style="font-size: 50px; float: left; font-family: 'Raleway', sans-serif;">120 </h4>
+                <p>Ksh</p>
+            </td>
         </tr>
         <tr>       
-            <td>
-                <img src="https://cdn.pixabay.com/photo/2020/04/04/15/07/sushi-5002639__340.jpg" alt="Sushi" height=250px width=100% style="border-radius: 15px; filter: opacity(.9);">
+            <td height=250px>
+                <img src="https://cdn.pixabay.com/photo/2020/04/04/15/07/sushi-5002639__340.jpg" alt="Sushi" height=100%px width=100% style="border-radius: 15px; filter: opacity(.9);">
             </td>
             <td>
                 <h2 style="font-size: 30px; background: rgba(255, 204, 229, .4);border-radius: 5px; padding: 10px; color: gold; ">Sushi</h3>
                 <p class="menu_description" style="color: white;">Sweet Japanese sushi.</p>
                 <a href="contact.html" style="text-decoration: none; color: white; padding: 5px 15px; margin-top: 20px; background: rgb(255, 51, 153); border-radius: 10px; ">Order</a>
             </td>
-            <td><h4 style="font-size: 30px; float: left; font-family: 'Raleway', sans-serif;">300 </h4><p style="">Ksh</p></td>
+            <td><h4 style="font-size: 50px; float: left; font-family: 'Raleway', sans-serif;">300 </h4><p style="">Ksh</p></td>
         </tr>
         <tr>
-            <td>
-                <img src="https://cdn.pixabay.com/photo/2017/07/16/11/57/fried-2509089_960_720.jpg" alt="Fried Rice" height=250px width=100% style="border-radius: 15px; filter: opacity(.7);">
+            <td height=250px>
+                <img src="https://pixabay.com/photos/snow-crab-for-the-equation-2620060/" alt="Fried Rice" height=100% width=100% style="border-radius: 15px; filter: opacity(.7);">
             </td>
             <td>
                 <h2 style="font-size: 30px; background: rgba(255, 204, 229, .4);border-radius: 5px; padding: 10px; color: gold; ">Fried Rice</h3>
                 <p class="menu_description" style="color: white;">Simply, delicious!</p>
                 <a href="contact.html" style="text-decoration: none; color: white; padding: 5px 15px; margin-top: 20px; background: rgb(255, 51, 153); border-radius: 10px; ">Order</a>
             </td>
-            <td><h4 style="font-size: 30px; float: left; font-family: 'Raleway', sans-serif;">120 </h4><p style="">Ksh</p></td>
+            <td><h4 style="font-size: 50px; float: left; font-family: 'Raleway', sans-serif;">120 </h4><p >Ksh</p></td>
         </tr>
         <tr>
-            <td>
-                <img src="https://cdn.pixabay.com/photo/2018/10/22/22/18/steak-3766548_960_720.jpg" alt="Steak Barbecue " height=250px width=100% style="border-radius: 15px;">
+            <td height=250px>
+                <img src="https://cdn.pixabay.com/photo/2018/10/22/22/18/steak-3766548_960_720.jpg" alt="Steak Barbecue " height=100% width=100% style="border-radius: 15px;">
             </td>
             <td>
                 <h2 style="font-size: 30px; background: rgba(255, 204, 229, .4);border-radius: 5px; padding: 10px; color: gold; ">Steak Barbecue</h3>
                 <p class="menu_description" style="color: white;">Enjoy the sweetest barbecue in Town!</p>
                 <a href="contact.html" style="text-decoration: none; color: white; padding: 5px 15px; margin-top: 20px; background: rgb(255, 51, 153); border-radius: 10px; ">Order</a>
             </td>
-            <td><h4  style="font-size: 30px; float: left; font-family: 'Raleway', sans-serif;">550 </h4><p style="">Ksh</p></td>
+            <td><h4  style="font-size: 50px; float: left; font-family: 'Raleway', sans-serif;">550 </h4><p style="">Ksh</p></td>
         </tr>
         <tr>
-            <td>
-                <img src="https://cdn.pixabay.com/photo/2019/11/09/17/02/burger-4614022_960_720.jpg" alt="Burger " height=250px width=100% style="border-radius: 15px;">
+            <td height=250px>
+                <img src="https://cdn.pixabay.com/photo/2019/11/09/17/02/burger-4614022_960_720.jpg" alt="Burger " height=100% width=100% style="border-radius: 15px;">
             </td>
             <td>
                 <h2 style="font-size: 30px; background: rgba(255, 204, 229, .4);border-radius: 5px; padding: 10px; color: gold; ">Burger</h3>
                 <p class="menu_description" style="color: white;">Fresh and delicious burger.</p>
                 <a href="contact.html" style="text-decoration: none; color: white; padding: 5px 15px; margin-top: 20px; background: rgb(255, 51, 153); border-radius: 10px; ">Order</a>
             </td>
-            <td><h4  style="font-size: 30px; float: left; font-family: 'Raleway', sans-serif;">450 </h4><p style="">Ksh</p></td>
+            <td><h4  style="font-size: 50px; float: left; font-family: 'Raleway', sans-serif;">450 </h4><p style="">Ksh</p></td>
         </tr>
     </table>
     
