Insert Fried Rice Image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,700&display=swap" rel="stylesheet">
@@ -28,8 +28,8 @@
                 <a href="contact.html" style="text-decoration: none; color: white; padding: 5px 15px; margin-top: 20px; background: rgb(255, 51, 153); border-radius: 10px; ">Order</a>
             </td>
             <td>
-                <p style="border:; padding:50px 50px; ; border-radius: 50px; position:absolute; bottom: 0; background: rgba(255, 230, 242, .15);"></p>
-                <h4 style="font-size: 50px; float: left; font-family: 'Raleway', sans-serif;">120 </h4>
+                <!-- <p style="border:; padding:50px 50px; ; border-radius: 50px; position:absolute; bottom: 0; background: rgba(255, 230, 242, .15);"></p> -->
+                <h4 style="font-size: 50px; float: left; font-family: 'Raleway', sans-serif;">300 </h4>
                 <p>Ksh</p>
             </td>
         </tr>
@@ -46,7 +46,7 @@
         </tr>
         <tr>
             <td height=250px>
-                <img src="https://pixabay.com/photos/snow-crab-for-the-equation-2620060/" alt="Fried Rice" height=100% width=100% style="border-radius: 15px; filter: opacity(.7);">
+                <img src="https://cdn.pixabay.com/photo/2018/09/12/09/05/vietnamese-3671620_960_720.png" alt="Fried Rice" height=100% width=100% style="border-radius: 15px; filter: opacity(.7);">
             </td>
             <td>
                 <h2 style="font-size: 30px; background: rgba(255, 204, 229, .4);border-radius: 5px; padding: 10px; color: gold; ">Fried Rice</h3>
